--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,10 @@
 RAKUTEN_APLICATION_ID = '楽天アプリケーションIDをここに記述'
 RAKUTEN_AFFILIATE_ID = '楽天アフィリエイトIDをここに記述'
+
+DB_USERNAME='RDSのマスターユーザー名'
+DB_PASSWORD='DB パスワード'
+DB_HOST='RDS エンドポイント'
+DB_DATABASE='DB名'
+
+AWS_ACCESS_KEY_ID = 'AWS アクセスキー'
+AWS_SECRET_ACCESS_KEY = 'AWS シークレットアクセスキー'
